--- a/index.html
+++ b/index.html
@@ -951,11 +951,44 @@
             }
         }
 
+        // --- Wake Lock Logic (Keep Screen On) ---
+        let wakeLock = null;
+
+        async function requestWakeLock() {
+            try {
+                if ('wakeLock' in navigator) {
+                    wakeLock = await navigator.wakeLock.request('screen');
+                    console.log('Wake Lock is active');
+
+                    wakeLock.addEventListener('release', () => {
+                        console.log('Wake Lock has been released');
+                    });
+                }
+            } catch (err) {
+                console.error(`${err.name}, ${err.message}`);
+            }
+        }
+
+        async function releaseWakeLock() {
+            if (wakeLock !== null) {
+                await wakeLock.release();
+                wakeLock = null;
+            }
+        }
+
+        // Re-acquire lock if visibility changes and session is running
+        document.addEventListener('visibilitychange', async () => {
+            if (wakeLock !== null && document.visibilityState === 'visible' && isRunning) {
+                await requestWakeLock();
+            }
+        });
+
         // Logique de Session
         function toggleSession() {
             if (!isRunning) {
                 // START
                 startAudio();
+                requestWakeLock(); // Request Keep Screen On
 
                 isRunning = true;
 
@@ -983,6 +1016,7 @@
             } else {
                 // STOP
                 stopAudio();
+                releaseWakeLock(); // Release Keep Screen On
 
                 isRunning = false;
 
