Fix broken modal logic caused by syntax error

--- a/index.html
+++ b/index.html
@@ -1315,7 +1315,7 @@
                 document.body.style.overflow = 'auto';
             }
         });
-        });
+        // Check for click on modal overlay
 
         // --- Billing Toggle Logic ---
         let isAnnual = false;
