Update currency display to CHF only

--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
                     annual: "Annuel",
                     discount: "-20%",
                     free: { name: "🆓 Free Brain", price: "Gratuit", features: ["4 modes binauraux", "2 fréquences pures", "Guide de respiration", "Sessions limitées à 5 min"] },
-                    premium: { name: "🧠 Nu Brain", priceMonthly: "4.99 € / $ / CHF / mois", priceAnnual: "3.99 € / $ / CHF / mois", billedAnnual: "Facturé 47.90 €/$ / an", features: ["Tout Free Brain +", "Sessions illimitées", "Fréquences personnalisées", "Patterns respiratoires avancés"] }
+                    premium: { name: "🧠 Nu Brain", priceMonthly: "4.99 CHF / mois", priceAnnual: "3.99 CHF / mois", billedAnnual: "Facturé 47.90 CHF / an", features: ["Tout Free Brain +", "Sessions illimitées", "Fréquences personnalisées", "Patterns respiratoires avancés"] }
                 },
                 settingsModal: {
                     title: "⚙️ Réglages",
@@ -867,7 +867,7 @@
                     annual: "Annual",
                     discount: "-20%",
                     free: { name: "🆓 Free Brain", price: "Free", features: ["4 binaural modes", "2 pure frequencies", "Breathing guide", "Sessions limited to 5 min"] },
-                    premium: { name: "🧠 Nu Brain", priceMonthly: "4.99 € / $ / CHF / month", priceAnnual: "3.99 € / $ / CHF / month", billedAnnual: "Billed 47.90 €/$ / year", features: ["Everything in Free Brain +", "Unlimited sessions", "Custom frequencies", "Advanced breathing patterns"] }
+                    premium: { name: "🧠 Nu Brain", priceMonthly: "4.99 CHF / month", priceAnnual: "3.99 CHF / month", billedAnnual: "Billed 47.90 CHF / year", features: ["Everything in Free Brain +", "Unlimited sessions", "Custom frequencies", "Advanced breathing patterns"] }
                 },
                 settingsModal: {
                     title: "⚙️ Settings",
